--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/reddit/reddit.js"></script>
+    <script src="js/reddit/reddit.services.js"></script>
   </head>
 
   <body ng-app="starter">
