--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <script src="js/controllers.js"></script>
     <script src="js/reddit/reddit.js"></script>
     <script src="js/reddit/reddit.services.js"></script>
+    <script src="js/helpers.js"></script>
   </head>
 
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
+
   </body>
 </html>
