--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="js/reddit/reddit.js"></script>
     <script src="js/reddit/reddit.services.js"></script>
     <script src="js/services/helpers.js"></script>
+    <script src="js/directives/scrollings.js"></script>
   </head>
 
   <body ng-app="starter">
