--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers/starter.controllers.js"></script>
     <script src="js/reddit/reddit.js"></script>
     <script src="js/reddit/reddit.services.js"></script>
+    <script src="js/reddit/reddit.filters.js"></script>
+    <script src="js/controllers/starter.controllers.js"></script>
     <script src="js/services/helpers.js"></script>
     <script src="js/directives/scrollings.js"></script>
   </head>
