--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <script src="js/reddit/reddit.js"></script>
     <script src="js/reddit/reddit.services.js"></script>
     <script src="js/reddit/reddit.filters.js"></script>
+    <script src="js/reddit/reddit.directives.js"></script>
     <script src="js/controllers/starter.controllers.js"></script>
     <script src="js/services/helpers.js"></script>
     <script src="js/directives/scrollings.js"></script>
+    <script src="js/external/lazy.min.js"></script>
   </head>
 
   <body ng-app="starter">
